Update Register.java